<resources>
    <string name="app_name">Absence Management tool</string>
    <string name="sign_in_label">Sign In with Google account</string>
    <string name="sign_out_label">Sign Out</string>
    <string name="save_label">Save</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="revoke_access_label">Unlink Account</string>
    <string name="manage_absences_button_label">Manage Absences</string>
    <string name="schedule_button_label">Schedule</string>
    <string name="list_persons_button_label">Persons</string>
    <string name="list_pending_approvals_button_label">Approvals</string>
    <string name="list_pending_verification_accounts_button_label">New Accounts</string>
    <string name="title_activity_add_absence">New Absence</string>
    <string name="title_activity_show_absence">Absence</string>
    <string name="absence_type_label">Type of absence</string>
    <string name="start_date_label">Start</string>
    <string name="end_date_label">End</string>
    <string name="absence_note_label">Note (optional)</string>
    <string name="absences_activity_label">Absences</string>
    <string name="show_absence_activity_title">Absence</string>
    <string name="approval_status_label">Approval status</string>
    <string name="timestamp_label">Last modified</string>
    <string name="approve_absence_button">Approve</string>
    <string name="account_pending_verification">Your account is being verified. Once done, you\'ll get access to the tool.</string>
    <string name="exit_button_label">Exit</string>
    <string name="search_hint">Search for name</string>
</resources>
